// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> emoji story renders snapshot 1`] = `
<button
  aria-label="so cool"
>
  😀 😎 👍 💯
</button>
`;

exports[`<Button /> primary story renders snapshot 1`] = `
<button
  variant="primary"
>
  Primary Button
</button>
`;

exports[`<Button /> secondary story renders snapshot 1`] = `
<button
  variant="secondary"
>
  Secondary Button
</button>
`;

exports[`<Button /> text story renders snapshot 1`] = `
<button>
  Hello Button
</button>
`;
